fix: toggle button center when collapsed

--- a/nginx/src/css/sidebar.css
+++ b/nginx/src/css/sidebar.css
@@ -120,3 +120,8 @@
 #toggle-btn:hover {
 	background-color: var(--hover-clr);
 }
+
+#toggle-btn {
+	padding: 8.5px;
+	width: 55px;
+}
