--- a/nginx/src/css/styles.css
+++ b/nginx/src/css/styles.css
@@ -15,9 +15,6 @@
 }
 
 html {
-	/* box-sizing: border-box; */
-	/* font-size: 100%; */
-	/* height: 100%; */
 	scroll-behavior: smooth;
 	font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	line-height: 1.5rem;
@@ -59,13 +56,12 @@ body {
 #content-wrapper {
 	display: flex;
 	width: 100%;
-	/* padding-top: 70px; */
 	min-height: 100vh;
 }
 
 #main-content {
 	flex-grow: 1;
 	padding: 20px;
-	background-color: yellow;
+	background-color: white;
 	overflow-y: auto;
 }
